cmake_minimum_required(VERSION 3.26)
project(clion)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

message("CMake build type: ${CMAKE_BUILD_TYPE}.")

include(recommend.cmake)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-march=native -O3")
add_compile_definitions(NDEBUG)

include_directories(search)
include_directories(search/cache)
include_directories(search/dag)
include_directories(search/dynprog)
include_directories(search/minibs)
include_directories(search/minimax)
include_directories(search/net)
include_directories(search/net/local)
include_directories(search/net/mpi)
include_directories(search/poset)
include_directories(search/strategies)
include_directories(search/weights)
include_directories(../parallel-hashmap)

if (NOT IBINS)
    set(IBINS 9)
endif ()

if (NOT IR)
    set(IR 19)
endif ()

if (NOT IS)
    set(IS 14)
endif ()

if (NOT IMONOT)
    recommend_monotonicity(${IBINS} ${IR} ${IS})
endif ()

if (NOT ISCALE)
    recommend_scaling(${IBINS} ${IR} ${IS})
endif ()

message("Recommending monotonicity ${IMONOT} and scaling factor ${ISCALE}.")
add_compile_definitions(IBINS=${IBINS})
add_compile_definitions(IR=${IR})
add_compile_definitions(IS=${IS})
add_compile_definitions(ISCALE=${ISCALE})
add_compile_definitions(IMONOT=${IMONOT})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../build/${IBINS}-${IR}-${IS}/")

add_executable(search
        search/cache/guar64.hpp
        search/cache/guar_locks.hpp
        search/cache/guarantee.hpp
        search/cache/loadconf.hpp
        search/cache/state.hpp
        search/dag/basics.hpp
        search/dag/class.hpp
        search/dag/cloning.hpp
        search/dag/consistency.hpp
        search/dag/dag.hpp
        search/dag/partial.hpp
        search/dag/print.hpp
        search/dynprog/algo.hpp
        search/dynprog/wrappers.hpp
        search/minibs/binary_storage.hpp
        search/minibs/feasibility.hpp
        search/itemconf.hpp
        search/minibs/minibs.hpp
        search/minibs/minidp.hpp
        search/minimax/auxiliary.hpp
        search/minimax/computation.hpp
        search/minimax/recursion.hpp
        search/minimax/sequencing.hpp
        search/net/local/broadcaster.hpp
        search/net/local/comm_basics.hpp
        search/net/local/local_communicator.hpp
        search/net/local/message_arrays.hpp
        search/net/local/synchronizer.hpp
        search/net/local/threadsafe_printer.hpp
        search/net/batches.hpp
        search/poset/poset.hpp
        search/strategies/abstract.hpp
        search/strategies/basic.hpp
        search/strategies/heuristical.hpp
        search/strategies/insight.hpp
        search/strategies/insight_methods.hpp
        search/advisor.hpp
        search/assumptions.hpp
        search/binconf.hpp
        search/cleanup.hpp
        search/common.hpp
        search/constants.hpp
        search/dfs.hpp
        search/exceptions.hpp
        search/filetools.hpp
        search/fits.hpp
        search/functions.hpp
        search/gs.hpp
        search/hash.hpp
        search/heur_adv.hpp
        search/heur_alg_knownsum.hpp
        search/heur_classes.hpp
        search/layers.hpp
        search/loadfile.hpp
        search/main.cpp
        search/maxfeas.hpp
        search/measure_structures.hpp
        search/optconf.hpp
        search/overseer.hpp
        search/overseer_methods.hpp
        search/performance_timer.hpp
        search/positional.hpp
        search/queen.hpp
        search/queen_methods.hpp
        search/sapling_manager.hpp
        search/saplings.hpp
        search/savefile.hpp
        search/server_properties.hpp
        search/small_classes.hpp
        search/strategy.hpp
        search/tasks/tasks.hpp
        search/thread_attr.hpp
        search/updater.hpp
        search/worker.hpp
        search/worker_methods.hpp
        search/minimax/heuristic_visits.hpp
        search/minimax/descend_ascend.hpp
        search/loadconf.hpp
        search/minibs/minibs-three.hpp
        search/minibs/midgame_feasibility.hpp
        search/minibs/fingerprint_storage.hpp
        search/minibs/fingerprints.hpp
        search/binomial_index.hpp
        search/minibs/knownsum_game.hpp
        search/minibs/flat_data.hpp)

set_target_properties(search
PROPERTIES
OUTPUT_NAME search-${ISCALE}
)


add_executable(minibs-tests tests/minibs-tests.cpp
        search/cache/guar64.hpp
        search/cache/guar_locks.hpp
        search/cache/guarantee.hpp
        search/cache/loadconf.hpp
        search/cache/state.hpp
        search/dag/basics.hpp
        search/dag/class.hpp
        search/dag/cloning.hpp
        search/dag/consistency.hpp
        search/dag/dag.hpp
        search/dag/partial.hpp
        search/dag/print.hpp
        search/dynprog/algo.hpp
        search/dynprog/wrappers.hpp
        search/minibs/binary_storage.hpp
        search/minibs/feasibility.hpp
        search/itemconf.hpp
        search/minibs/minibs.hpp
        search/minibs/minidp.hpp
        search/minimax/auxiliary.hpp
        search/minimax/computation.hpp
        search/minimax/recursion.hpp
        search/minimax/sequencing.hpp
        search/net/local/broadcaster.hpp
        search/net/local/comm_basics.hpp
        search/net/local/local_communicator.hpp
        search/net/local/message_arrays.hpp
        search/net/local/synchronizer.hpp
        search/net/local/threadsafe_printer.hpp
        search/net/batches.hpp
        search/poset/poset.hpp
        search/strategies/abstract.hpp
        search/strategies/basic.hpp
        search/strategies/heuristical.hpp
        search/strategies/insight.hpp
        search/strategies/insight_methods.hpp
        search/advisor.hpp
        search/assumptions.hpp
        search/binconf.hpp
        search/cleanup.hpp
        search/common.hpp
        search/constants.hpp
        search/dfs.hpp
        search/exceptions.hpp
        search/filetools.hpp
        search/fits.hpp
        search/functions.hpp
        search/gs.hpp
        search/hash.hpp
        search/heur_adv.hpp
        search/heur_alg_knownsum.hpp
        search/heur_classes.hpp
        search/layers.hpp
        search/loadfile.hpp
        search/maxfeas.hpp
        search/measure_structures.hpp
        search/optconf.hpp
        search/overseer.hpp
        search/overseer_methods.hpp
        search/performance_timer.hpp
        search/positional.hpp
        search/queen.hpp
        search/queen_methods.hpp
        search/sapling_manager.hpp
        search/saplings.hpp
        search/savefile.hpp
        search/server_properties.hpp
        search/small_classes.hpp
        search/strategy.hpp
        search/tasks/tasks.hpp
        search/thread_attr.hpp
        search/updater.hpp
        search/worker.hpp
        search/worker_methods.hpp
        search/minimax/heuristic_visits.hpp
        search/minimax/descend_ascend.hpp
        search/loadconf.hpp
        search/minibs/minibs-three.hpp
        search/minibs/midgame_feasibility.hpp
        search/minibs/fingerprint_storage.hpp
        search/minibs/fingerprints.hpp
        search/binomial_index.hpp
        search/minibs/knownsum_game.hpp
        search/minibs/flat_data.hpp)

set_target_properties(minibs-tests
        PROPERTIES
        OUTPUT_NAME minibs-tests-${ISCALE}
)

add_executable(listsaplings minitools/listsaplings.cpp
        search/cache/guar64.hpp
        search/cache/guar_locks.hpp
        search/cache/guarantee.hpp
        search/cache/loadconf.hpp
        search/cache/state.hpp
        search/dag/basics.hpp
        search/dag/class.hpp
        search/dag/cloning.hpp
        search/dag/consistency.hpp
        search/dag/dag.hpp
        search/dag/partial.hpp
        search/dag/print.hpp
        search/dynprog/algo.hpp
        search/dynprog/wrappers.hpp
        search/minibs/binary_storage.hpp
        search/minibs/feasibility.hpp
        search/itemconf.hpp
        search/minibs/minibs.hpp
        search/minibs/minidp.hpp
        search/minimax/auxiliary.hpp
        search/minimax/computation.hpp
        search/minimax/recursion.hpp
        search/minimax/sequencing.hpp
        search/net/local/broadcaster.hpp
        search/net/local/comm_basics.hpp
        search/net/local/local_communicator.hpp
        search/net/local/message_arrays.hpp
        search/net/local/synchronizer.hpp
        search/net/local/threadsafe_printer.hpp
        search/net/batches.hpp
        search/poset/poset.hpp
        search/strategies/abstract.hpp
        search/strategies/basic.hpp
        search/strategies/heuristical.hpp
        search/strategies/insight.hpp
        search/strategies/insight_methods.hpp
        search/advisor.hpp
        search/assumptions.hpp
        search/binconf.hpp
        search/cleanup.hpp
        search/common.hpp
        search/constants.hpp
        search/dfs.hpp
        search/exceptions.hpp
        search/filetools.hpp
        search/fits.hpp
        search/functions.hpp
        search/gs.hpp
        search/hash.hpp
        search/heur_adv.hpp
        search/heur_alg_knownsum.hpp
        search/heur_classes.hpp
        search/layers.hpp
        search/loadfile.hpp
        search/maxfeas.hpp
        search/measure_structures.hpp
        search/optconf.hpp
        search/overseer.hpp
        search/overseer_methods.hpp
        search/performance_timer.hpp
        search/positional.hpp
        search/queen.hpp
        search/queen_methods.hpp
        search/sapling_manager.hpp
        search/saplings.hpp
        search/savefile.hpp
        search/server_properties.hpp
        search/small_classes.hpp
        search/strategy.hpp
        search/tasks/tasks.hpp
        search/thread_attr.hpp
        search/updater.hpp
        search/worker.hpp
        search/worker_methods.hpp
        search/minimax/heuristic_visits.hpp
        search/minimax/descend_ascend.hpp
        search/loadconf.hpp
        search/minibs/minibs-three.hpp
        search/minibs/midgame_feasibility.hpp)

add_executable(midgame-feasible-tests tests/midgame-feasible-tests.cpp
        search/cache/guar64.hpp
        search/cache/guar_locks.hpp
        search/cache/guarantee.hpp
        search/cache/loadconf.hpp
        search/cache/state.hpp
        search/dag/basics.hpp
        search/dag/class.hpp
        search/dag/cloning.hpp
        search/dag/consistency.hpp
        search/dag/dag.hpp
        search/dag/partial.hpp
        search/dag/print.hpp
        search/dynprog/algo.hpp
        search/dynprog/wrappers.hpp
        search/minibs/binary_storage.hpp
        search/minibs/feasibility.hpp
        search/itemconf.hpp
        search/minibs/minibs.hpp
        search/minibs/minidp.hpp
        search/minimax/auxiliary.hpp
        search/minimax/computation.hpp
        search/minimax/recursion.hpp
        search/minimax/sequencing.hpp
        search/net/local/broadcaster.hpp
        search/net/local/comm_basics.hpp
        search/net/local/local_communicator.hpp
        search/net/local/message_arrays.hpp
        search/net/local/synchronizer.hpp
        search/net/local/threadsafe_printer.hpp
        search/net/batches.hpp
        search/poset/poset.hpp
        search/strategies/abstract.hpp
        search/strategies/basic.hpp
        search/strategies/heuristical.hpp
        search/strategies/insight.hpp
        search/strategies/insight_methods.hpp
        search/advisor.hpp
        search/assumptions.hpp
        search/binconf.hpp
        search/cleanup.hpp
        search/common.hpp
        search/constants.hpp
        search/dfs.hpp
        search/exceptions.hpp
        search/filetools.hpp
        search/fits.hpp
        search/functions.hpp
        search/gs.hpp
        search/hash.hpp
        search/heur_adv.hpp
        search/heur_alg_knownsum.hpp
        search/heur_classes.hpp
        search/layers.hpp
        search/loadfile.hpp
        search/maxfeas.hpp
        search/measure_structures.hpp
        search/optconf.hpp
        search/overseer.hpp
        search/overseer_methods.hpp
        search/performance_timer.hpp
        search/positional.hpp
        search/queen.hpp
        search/queen_methods.hpp
        search/sapling_manager.hpp
        search/saplings.hpp
        search/savefile.hpp
        search/server_properties.hpp
        search/small_classes.hpp
        search/strategy.hpp
        search/tasks/tasks.hpp
        search/thread_attr.hpp
        search/updater.hpp
        search/worker.hpp
        search/worker_methods.hpp
        search/minimax/heuristic_visits.hpp
        search/minimax/descend_ascend.hpp
        search/loadconf.hpp
        search/minibs/minibs-three.hpp
        search/minibs/midgame_feasibility.hpp)

add_executable(awt minitools/alg-winning-table.cpp
        search/cache/guar64.hpp
        search/cache/guar_locks.hpp
        search/cache/guarantee.hpp
        search/cache/loadconf.hpp
        search/cache/state.hpp
        search/dag/basics.hpp
        search/dag/class.hpp
        search/dag/cloning.hpp
        search/dag/consistency.hpp
        search/dag/dag.hpp
        search/dag/partial.hpp
        search/dag/print.hpp
        search/dynprog/algo.hpp
        search/dynprog/wrappers.hpp
        search/minibs/binary_storage.hpp
        search/minibs/feasibility.hpp
        search/itemconf.hpp
        search/minibs/minibs.hpp
        search/minibs/minidp.hpp
        search/minimax/auxiliary.hpp
        search/minimax/computation.hpp
        search/minimax/recursion.hpp
        search/minimax/sequencing.hpp
        search/net/local/broadcaster.hpp
        search/net/local/comm_basics.hpp
        search/net/local/local_communicator.hpp
        search/net/local/message_arrays.hpp
        search/net/local/synchronizer.hpp
        search/net/local/threadsafe_printer.hpp
        search/net/batches.hpp
        search/poset/poset.hpp
        search/strategies/abstract.hpp
        search/strategies/basic.hpp
        search/strategies/heuristical.hpp
        search/strategies/insight.hpp
        search/strategies/insight_methods.hpp
        search/advisor.hpp
        search/assumptions.hpp
        search/binconf.hpp
        search/cleanup.hpp
        search/common.hpp
        search/constants.hpp
        search/dfs.hpp
        search/exceptions.hpp
        search/filetools.hpp
        search/fits.hpp
        search/functions.hpp
        search/gs.hpp
        search/hash.hpp
        search/heur_adv.hpp
        search/heur_alg_knownsum.hpp
        search/heur_classes.hpp
        search/layers.hpp
        search/loadfile.hpp
        search/maxfeas.hpp
        search/measure_structures.hpp
        search/optconf.hpp
        search/overseer.hpp
        search/overseer_methods.hpp
        search/performance_timer.hpp
        search/positional.hpp
        search/queen.hpp
        search/queen_methods.hpp
        search/sapling_manager.hpp
        search/saplings.hpp
        search/savefile.hpp
        search/server_properties.hpp
        search/small_classes.hpp
        search/strategy.hpp
        search/tasks/tasks.hpp
        search/thread_attr.hpp
        search/updater.hpp
        search/worker.hpp
        search/worker_methods.hpp
        search/minimax/heuristic_visits.hpp
        search/minimax/descend_ascend.hpp
        search/loadconf.hpp
        search/minibs/minibs-three.hpp
        search/minibs/midgame_feasibility.hpp
        search/binomial_index.hpp
        search/minibs/knownsum_game.hpp
        search/minibs/flat_data.hpp)


add_executable(painter painter/painter.cpp
        search/cache/guar64.hpp
        search/cache/guar_locks.hpp
        search/cache/guarantee.hpp
        search/cache/loadconf.hpp
        search/cache/state.hpp
        search/dag/basics.hpp
        search/dag/class.hpp
        search/dag/cloning.hpp
        search/dag/consistency.hpp
        search/dag/dag.hpp
        search/dag/partial.hpp
        search/dag/print.hpp
        search/dynprog/algo.hpp
        search/dynprog/wrappers.hpp
        search/minibs/binary_storage.hpp
        search/minibs/feasibility.hpp
        search/itemconf.hpp
        search/minibs/minibs.hpp
        search/minibs/minidp.hpp
        search/minimax/auxiliary.hpp
        search/minimax/computation.hpp
        search/minimax/recursion.hpp
        search/minimax/sequencing.hpp
        search/net/local/broadcaster.hpp
        search/net/local/comm_basics.hpp
        search/net/local/local_communicator.hpp
        search/net/local/message_arrays.hpp
        search/net/local/synchronizer.hpp
        search/net/local/threadsafe_printer.hpp
        search/net/batches.hpp
        search/poset/poset.hpp
        search/strategies/abstract.hpp
        search/strategies/basic.hpp
        search/strategies/heuristical.hpp
        search/strategies/insight.hpp
        search/strategies/insight_methods.hpp
        search/advisor.hpp
        search/assumptions.hpp
        search/binconf.hpp
        search/cleanup.hpp
        search/common.hpp
        search/constants.hpp
        search/dfs.hpp
        search/exceptions.hpp
        search/filetools.hpp
        search/fits.hpp
        search/functions.hpp
        search/gs.hpp
        search/hash.hpp
        search/heur_adv.hpp
        search/heur_alg_knownsum.hpp
        search/heur_classes.hpp
        search/layers.hpp
        search/loadfile.hpp
        search/maxfeas.hpp
        search/measure_structures.hpp
        search/optconf.hpp
        search/overseer.hpp
        search/overseer_methods.hpp
        search/performance_timer.hpp
        search/positional.hpp
        search/queen.hpp
        search/queen_methods.hpp
        search/sapling_manager.hpp
        search/saplings.hpp
        search/savefile.hpp
        search/server_properties.hpp
        search/small_classes.hpp
        search/strategy.hpp
        search/tasks/tasks.hpp
        search/thread_attr.hpp
        search/updater.hpp
        search/worker.hpp
        search/worker_methods.hpp
        search/minimax/heuristic_visits.hpp
        search/minimax/descend_ascend.hpp
        search/loadconf.hpp
        search/minibs/minibs-three.hpp
        search/minibs/midgame_feasibility.hpp)
